[gd_scene load_steps=30 format=3 uid="uid://b0p5grjmpkj1u"]

[ext_resource type="Script" uid="uid://dlb044x67s2cb" path="res://Scripts/main_menu.gd" id="1_28flt"]
[ext_resource type="ButtonGroup" uid="uid://cefxtylrijm1c" path="res://Scenes/level_select_buttons.tres" id="3_1ehe0"]
[ext_resource type="PackedScene" uid="uid://dr5hrjslmsbh3" path="res://Scenes/map_lab.tscn" id="3_n45e2"]
[ext_resource type="PackedScene" uid="uid://3k43mtbqb03q" path="res://Scenes/game_manager.tscn" id="4_ce3w2"]
[ext_resource type="PackedScene" uid="uid://c33mj51pis1o3" path="res://Scenes/map_hospital.tscn" id="4_opfnp"]
[ext_resource type="PackedScene" uid="uid://bj81dju55e07r" path="res://Scenes/map_elevator.tscn" id="5_cp0ys"]
[ext_resource type="FontFile" uid="uid://b4e7d31oc5tyi" path="res://Assets/Fonts/Permanentmarker-Regular.ttf" id="5_n45e2"]
[ext_resource type="PackedScene" uid="uid://y105u0qil5yw" path="res://Scenes/map_factory.tscn" id="6_yhxw7"]
[ext_resource type="PackedScene" uid="uid://baea1sddgtx7k" path="res://Scenes/map_raffles.tscn" id="7_trj04"]
[ext_resource type="PackedScene" uid="uid://dv5n7vlkn465l" path="res://Scenes/map_residential.tscn" id="8_16hvj"]
[ext_resource type="PackedScene" uid="uid://21by7p567r3x" path="res://Scenes/map_helipad.tscn" id="9_vr1f0"]
[ext_resource type="Texture2D" uid="uid://dgb8jwcgt8ee0" path="res://Assets/Textures/LevelThumbnails/thumbnail_elevator.png" id="11_t1dhk"]
[ext_resource type="Texture2D" uid="uid://dpm4cja26o620" path="res://Assets/Textures/LevelThumbnails/thumbnail_lab.png" id="11_ujyyl"]
[ext_resource type="Texture2D" uid="uid://dhs2vyuh8wqbx" path="res://Assets/Textures/LevelThumbnails/thumbnail_hospital.png" id="12_mkpwh"]
[ext_resource type="Texture2D" uid="uid://cbek3k1hrgxvi" path="res://Assets/Textures/LevelThumbnails/thumbnail_factory.png" id="14_4nkqq"]
[ext_resource type="Texture2D" uid="uid://brelllsgb6i5w" path="res://Assets/Textures/LevelThumbnails/thumbnail_raffles.png" id="15_ehtkc"]
[ext_resource type="Texture2D" uid="uid://byetvux2h4s78" path="res://Assets/Textures/LevelThumbnails/thumbnail_residential.png" id="16_6dk6o"]
[ext_resource type="Texture2D" uid="uid://cgf40d0q0o4fn" path="res://Assets/Textures/LevelThumbnails/thumbnail_helipad1.png" id="17_jr6u5"]

[sub_resource type="Gradient" id="Gradient_ce3w2"]
offsets = PackedFloat32Array(0, 0.00550964)
colors = PackedColorArray(0, 0, 0, 1, 0.141176, 0.168627, 0.211765, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_n45e2"]
gradient = SubResource("Gradient_ce3w2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_opfnp"]
content_margin_left = 6.0
content_margin_top = 2.0
content_margin_right = 6.0
content_margin_bottom = 2.0
texture = SubResource("GradientTexture1D_n45e2")

[sub_resource type="Gradient" id="Gradient_ujyyl"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mkpwh"]
gradient = SubResource("Gradient_ujyyl")
width = 120
height = 100
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_n45e2"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_opfnp"]
gradient = SubResource("Gradient_n45e2")
width = 120
height = 100
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_mkpwh"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4nkqq"]
gradient = SubResource("Gradient_mkpwh")
width = 120
height = 100
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_cp0ys"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yhxw7"]
gradient = SubResource("Gradient_cp0ys")
width = 120
height = 100
fill_to = Vector2(1, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28flt")
ls_buttons = ExtResource("3_1ehe0")
map_lab = ExtResource("3_n45e2")
map_hospital = ExtResource("4_opfnp")
map_elevator = ExtResource("5_cp0ys")
map_factory = ExtResource("6_yhxw7")
map_raffles = ExtResource("7_trj04")
map_residential = ExtResource("8_16hvj")
map_helipad = ExtResource("9_vr1f0")
game_manager = ExtResource("4_ce3w2")

[node name="TempBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.207997, 0.275115, 0.382213, 1)

[node name="MainMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EntranceButtons" type="VBoxContainer" parent="MainMenu/CenterContainer"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="MainMenu/CenterContainer/EntranceButtons"]
layout_mode = 2
text = "Play"

[node name="ControlsButton" type="Button" parent="MainMenu/CenterContainer/EntranceButtons"]
layout_mode = 2
text = "Controls"

[node name="OptionsButton" type="Button" parent="MainMenu/CenterContainer/EntranceButtons"]
layout_mode = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="MainMenu/CenterContainer/EntranceButtons"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="MainMenu/CenterContainer/EntranceButtons"]
layout_mode = 2
text = "Quit"

[node name="LevelSelect" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="LevelSelect/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 130

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSelect/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_opfnp")
text = "Start"

[node name="MarginContainer" type="MarginContainer" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15.82)
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 25
text = "Back"

[node name="VBoxContainer2" type="VBoxContainer" parent="LevelSelect/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Level"

[node name="GridContainer" type="GridContainer" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
columns = 2

[node name="Level1" type="VBoxContainer" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2

[node name="MapLabButton" type="TextureButton" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer/Level1"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_1ehe0")
texture_normal = ExtResource("11_ujyyl")
texture_pressed = SubResource("GradientTexture2D_mkpwh")

[node name="Label" type="Label" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer/Level1"]
layout_mode = 2
text = "Lab"

[node name="Level2" type="VBoxContainer" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2

[node name="MapHospitalButton" type="TextureButton" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer/Level2"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_1ehe0")
texture_normal = ExtResource("12_mkpwh")
texture_pressed = SubResource("GradientTexture2D_opfnp")

[node name="Label" type="Label" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer/Level2"]
layout_mode = 2
text = "Hospital"

[node name="Level3" type="VBoxContainer" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2

[node name="MapElevatorButton" type="TextureButton" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer/Level3"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_1ehe0")
texture_normal = ExtResource("11_t1dhk")
texture_pressed = SubResource("GradientTexture2D_4nkqq")

[node name="Label" type="Label" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer/Level3"]
layout_mode = 2
text = "Elevator"

[node name="Level4" type="VBoxContainer" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2

[node name="MapFactoryButton" type="TextureButton" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer/Level4"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_1ehe0")
texture_normal = ExtResource("14_4nkqq")
texture_pressed = SubResource("GradientTexture2D_yhxw7")

[node name="Label" type="Label" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer/Level4"]
layout_mode = 2
text = "Factory"

[node name="Level5" type="VBoxContainer" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2

[node name="MapRafflesButton" type="TextureButton" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer/Level5"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_1ehe0")
texture_normal = ExtResource("15_ehtkc")
texture_pressed = SubResource("GradientTexture2D_yhxw7")

[node name="Label" type="Label" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer/Level5"]
layout_mode = 2
text = "Raffles"

[node name="Level6" type="VBoxContainer" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2

[node name="MapResidentialButton" type="TextureButton" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer/Level6"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_1ehe0")
texture_normal = ExtResource("16_6dk6o")
texture_pressed = SubResource("GradientTexture2D_yhxw7")

[node name="Label" type="Label" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer/Level6"]
layout_mode = 2
text = "Residential"

[node name="Level7" type="VBoxContainer" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2

[node name="MapHelipadButton" type="TextureButton" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer/Level7"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_1ehe0")
texture_normal = ExtResource("17_jr6u5")
texture_pressed = SubResource("GradientTexture2D_yhxw7")

[node name="Label" type="Label" parent="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer2/GridContainer/Level7"]
layout_mode = 2
text = "Helipad"

[node name="RoundAmount" type="VBoxContainer" parent="LevelSelect/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LevelSelect/CenterContainer/HBoxContainer/RoundAmount"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Rounds"

[node name="SpinBox" type="SpinBox" parent="LevelSelect/CenterContainer/HBoxContainer/RoundAmount"]
layout_mode = 2
min_value = 1.0
value = 3.0
rounded = true
alignment = 1
select_all_on_focus = true

[node name="RoundLength" type="VBoxContainer" parent="LevelSelect/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LevelSelect/CenterContainer/HBoxContainer/RoundLength"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Round Length"

[node name="RoundLengthSelector" type="OptionButton" parent="LevelSelect/CenterContainer/HBoxContainer/RoundLength"]
layout_mode = 2
size_flags_vertical = 0
selected = 2
item_count = 5
popup/item_0/text = "5 seconds"
popup/item_0/id = 0
popup/item_1/text = "10 seconds"
popup/item_1/id = 1
popup/item_2/text = "30 seconds"
popup/item_2/id = 2
popup/item_3/text = "1 minute"
popup/item_3/id = 3
popup/item_4/text = "5 minutes"
popup/item_4/id = 4

[node name="Controls" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="HBoxContainer" parent="Controls/CenterContainer"]
layout_mode = 2

[node name="Player1" type="VBoxContainer" parent="Controls/CenterContainer/CenterContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Controls/CenterContainer/CenterContainer/Player1"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Player 1"

[node name="Movement" type="Label" parent="Controls/CenterContainer/CenterContainer/Player1"]
layout_mode = 2
text = "Move: WASD"

[node name="Shoot" type="Label" parent="Controls/CenterContainer/CenterContainer/Player1"]
layout_mode = 2
text = "Shoot: V"

[node name="Equipment" type="Label" parent="Controls/CenterContainer/CenterContainer/Player1"]
visible = false
layout_mode = 2
text = "Use Equipment: E"

[node name="MarginContainer" type="MarginContainer" parent="Controls/CenterContainer/CenterContainer"]
custom_minimum_size = Vector2(68.645, 0)
layout_mode = 2

[node name="Player2" type="VBoxContainer" parent="Controls/CenterContainer/CenterContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Controls/CenterContainer/CenterContainer/Player2"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Player 2"

[node name="Movement" type="Label" parent="Controls/CenterContainer/CenterContainer/Player2"]
layout_mode = 2
text = "Move: IJKL"

[node name="Shoot" type="Label" parent="Controls/CenterContainer/CenterContainer/Player2"]
layout_mode = 2
text = "Shoot: /"

[node name="Equipment" type="Label" parent="Controls/CenterContainer/CenterContainer/Player2"]
visible = false
layout_mode = 2
text = "Use Equipment: ENTER"

[node name="Button" type="Button" parent="Controls"]
layout_mode = 2
offset_left = 31.0
offset_top = 32.0
offset_right = 97.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 25
text = "Back"

[node name="Options" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BackButton" type="Button" parent="Options"]
layout_mode = 0
offset_left = 31.0
offset_top = 32.0
offset_right = 97.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 25
text = "Back"

[node name="CenterContainer" type="CenterContainer" parent="Options"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="HBoxContainer" parent="Credits/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Left Column" type="VBoxContainer" parent="Credits/CenterContainer/CenterContainer"]
layout_mode = 2

[node name="Miniscule" type="RichTextLabel" parent="Credits/CenterContainer/CenterContainer/Left Column"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 14
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/normal_font = ExtResource("5_n45e2")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[tornado radius=5.0 freq=1.0 connected=1][rainbow freq=1.0 sat=0.8 val=0.8 speed=.5]Colin Shulte (Miniscule)[/rainbow][/tornado]"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="text" type="RichTextLabel" parent="Credits/CenterContainer/CenterContainer/Left Column"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 14
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/normal_font = ExtResource("5_n45e2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Programmer
	- Camera Zooming
	- Controller Support
"
fit_content = true
autowrap_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Credits/CenterContainer/CenterContainer/Left Column"]
layout_mode = 2
theme_override_constants/margin_top = 45

[node name="Walpang" type="RichTextLabel" parent="Credits/CenterContainer/CenterContainer/Left Column"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 14
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/normal_font = ExtResource("5_n45e2")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[tornado radius=5.0 freq=1.0 connected=1][rainbow freq=1.0 sat=0.8 val=0.8 speed=.5]Walpang[/rainbow][/tornado]"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="text2" type="RichTextLabel" parent="Credits/CenterContainer/CenterContainer/Left Column"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 14
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/normal_font = ExtResource("5_n45e2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Programmer
	- Ghosts
	- Player Movement
Sound Design
Music
"
fit_content = true
autowrap_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Credits/CenterContainer/CenterContainer"]
custom_minimum_size = Vector2(68.645, 0)
layout_mode = 2
theme_override_constants/margin_left = 110

[node name="Left Column2" type="VBoxContainer" parent="Credits/CenterContainer/CenterContainer"]
layout_mode = 2

[node name="Dorivy" type="RichTextLabel" parent="Credits/CenterContainer/CenterContainer/Left Column2"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 14
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/normal_font = ExtResource("5_n45e2")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[tornado radius=5.0 freq=1.0 connected=1][rainbow freq=1.0 sat=0.8 val=0.8 speed=.5]Dorivy
[/rainbow][/tornado]"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="text" type="RichTextLabel" parent="Credits/CenterContainer/CenterContainer/Left Column2"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 14
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/normal_font = ExtResource("5_n45e2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Programmer
	- Game Manager
Environment Art
Level Design"
fit_content = true
autowrap_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Credits/CenterContainer/CenterContainer/Left Column2"]
layout_mode = 2
theme_override_constants/margin_top = 45

[node name="Lucy The Pirate" type="RichTextLabel" parent="Credits/CenterContainer/CenterContainer/Left Column2"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 14
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/normal_font = ExtResource("5_n45e2")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[tornado radius=5.0 freq=1.0 connected=1][rainbow freq=1.0 sat=0.8 val=0.8 speed=.5]Lucy the Pirate
[/rainbow][/tornado]"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="text2" type="RichTextLabel" parent="Credits/CenterContainer/CenterContainer/Left Column2"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 14
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/normal_font = ExtResource("5_n45e2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Programmer
	- Laser
	- Ghosts
Character Art
Voice Acting
This font!"
fit_content = true
autowrap_mode = 0

[node name="BackButton" type="Button" parent="Credits"]
layout_mode = 0
offset_left = 31.0
offset_top = 32.0
offset_right = 97.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 25
text = "Back"

[node name="RichTextLabel" type="RichTextLabel" parent="Credits"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 14
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/normal_font = ExtResource("5_n45e2")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[tornado radius=5.0 freq=1.0 connected=1][rainbow freq=1.0 sat=0.8 val=0.8 speed=.5]Team minidorwalucy the ivysculepangpirate[/rainbow][/tornado]"
fit_content = true
horizontal_alignment = 1

[connection signal="pressed" from="MainMenu/CenterContainer/EntranceButtons/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/EntranceButtons/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/EntranceButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/EntranceButtons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/EntranceButtons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="LevelSelect/CenterContainer/HBoxContainer/VBoxContainer/BackButton" to="." method="_on_level_select_back_button_pressed"]
[connection signal="value_changed" from="LevelSelect/CenterContainer/HBoxContainer/RoundAmount/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="item_selected" from="LevelSelect/CenterContainer/HBoxContainer/RoundLength/RoundLengthSelector" to="." method="_on_round_length_selector_item_selected"]
[connection signal="pressed" from="Controls/Button" to="." method="_on_controls_back_button_pressed"]
[connection signal="pressed" from="Options/BackButton" to="." method="_on_options_back_button_pressed"]
[connection signal="pressed" from="Credits/BackButton" to="." method="_on_credits_back_button_pressed"]
